--- a/s3TriggerToLambda/serverless.yml
+++ b/s3TriggerToLambda/serverless.yml
@@ -5,7 +5,7 @@ frameworkVersion: '2 || 3'
 provider:
   name: aws
   runtime: nodejs12.x
-  region: ap-southeast-2
+  region: ap-south-1
   lambdaHashingVersion: 20201221
   iamRoleStatements:
     - Effect: Allow
